# rpl-sim

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  atmosisa.csv  rpl_sim_comm.cpp  rpl_sim_comm.h  rpl_sim_serial.cpp  rpl_sim_serial.ino
.github/workflows/: run_tests.yml
config/: example_sim_config.json
data/: README.md  mach_vs_cd.csv  sim_data_nowind.csv  thrust_curve.csv
lib/optparse/: optparse.h
src/: FluidToEngineSubsystem.cpp  FluidToEngineSubsystem.h  LinearInterpolatePropulsion.cpp  LinearInterpolatePropulsion.h  PhoenixPositionProvider.cpp  PhoenixPositionProvider.h  PhoenixPositionProviderUtility.cpp  PhoenixPositionProviderUtility.h  RocketFlightProperties.cpp  RocketFlightProperties.hpp  RocketFlightPropertiesUtils.cpp  RocketFlightPropertiesUtils.hpp  SimParams.hpp  Vector3.cpp  Vector3.hpp  VirtualBarometer.cpp  VirtualBarometer.h  atmosisa.csv  exitCodeDefines.hpp  main.cpp  next_to_do.md  output_types.hpp  rpl_sim_host.cpp  rpl_sim_host.h  rpl_sim_software.cpp  sim.cpp  test.cpp  virtual_GPS.cpp  virtual_GPS.hpp
src/CommandSchedule/: Command.cpp  Command.hpp  CommandHandler.hpp  README.md
src/fluid_engine_sim/: FluidToEngineSubsystem.cpp  FluidToEngineSubsystem.h
test/: FluidToEngineSimTests.cpp  VirtualBarometerTests.cpp  tests.cpp  virtual_GPS_test.cpp
